# carrier-pigeon

./: .gitignore  Cargo.toml
carrier-pigeon-app/: Cargo.toml
carrier-pigeon-app/src/: errors.rs  main.rs  model.rs  state.rs  tui.rs  ui.rs
carrier-pigeon-app/src/ui/: layout.rs  logging.rs  util.rs  widgets.rs
carrier-pigeon-core/: Cargo.toml
carrier-pigeon-core/src/: lib.rs
carrier-pigeon-lib/: Cargo.toml
carrier-pigeon-lib/src/: lib.rs
carrier-pigeon-macros/: Cargo.toml
carrier-pigeon-macros/src/: lib.rs
