[workspace]
resolver = "2"

members = [
    "carrier-pigeon-core",
    "carrier-pigeon-app",
    "carrier-pigeon-macros",
]

[workspace.package]
version = "0.1.0"
edition = "2021"
authors = ["Caleb Ekstrand <ekstrand.caleb@ekshore.net>"]

[workspace.dependencies]
color-eyre = "0.6.3"
log = "0.4.21"
reqwest = "0.11.24"
serde = { version = "1.0.196", features = ["derive"] }
serde_json = "1.0.113"
tokio = { version = "1.39.3", features = ["macros", "rt-multi-thread"] }
