[package]
name = "carrier-pigeon-app"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[dependencies]
iced = "0.10.0"
log = "0.4.21"
native-dialog = "0.7.0"
reqwest = "0.11.24"
serde = { version = "1.0.196", features = ["derive"] }
serde_json = "1.0.113"
simplelog = "0.12.2"
tokio = { version = "1.36.0", features = ["full"] }
carrier_pigeon_macros = { path ="../carrier-pigeon-macros" }
