[package]
name = "carrier-pigeon-app"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[dependencies]
log = "0.4.21"
reqwest = "0.11.24"
serde = { version = "1.0.196", features = ["derive"] }
serde_json = "1.0.113"
simplelog = "0.12.2"
tokio = { version = "1.39.3", features = ["full"] }
carrier-pigeon-macros = { path = "../carrier-pigeon-macros" }
ratatui = { version = "0.27.0", features = [
    "unstable-widget-ref",
    "unstable-rendered-line-info",
] }
crossterm = { version = "0.28.1" }
color-eyre = "0.6.3"
env_home = "0.1.0"
time = { version = "0.3.36", features = ["macros"] }
