[package]
name = "carrier-pigeon-app"
version.workspace = true
edition.workspace = true
authors.workspace = true

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[dependencies]
carrier-pigeon-macros = { path = "../carrier-pigeon-macros" }
carrier-pigeon-core = { path = "../carrier-pigeon-core" }
color-eyre.workspace = true
log.workspace = true
reqwest.workspace = true
serde.workspace = true
serde_json.workspace = true
tokio.workspace = true

simplelog = "0.12.2"
ratatui = { version = "0.27.0", features = [
    "unstable-widget-ref",
    "unstable-rendered-line-info",
] }
crossterm = { version = "0.28.1" }
env_home = "0.1.0"
time = { version = "0.3.36", features = ["macros"] }
