[package]
name = "carrier-pigeon-lib"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
iced = "0.12.1"
log = "0.4.21"
serde = { version = "1.0.196", features = ["derive"] }
serde_json = "1.0.113" 
reqwest = "0.11.24"
tokio = { version = "1.36.0", features = ["full"] }
carrier-pigeon-macros = { path = "../carrier-pigeon-macros/" }
