[package]
name = "carrier-pigeon-macros"
version.workspace = true
edition.workspace = true
authors.workspace = true

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[lib]
proc-macro = true

[dependencies]
syn = "2.0.52"
quote = "1.0.35"
proc-macro2 = "1.0.79"
